--- a/xen-arch.tex
+++ b/xen-arch.tex
@@ -114,6 +114,11 @@ A virtual machine is taken to be an efficient, isolated duplicate of the real ma
 \begin{itemize}
 \item \textbf{efficient}: capable of producing desired results without wasting materials, time, or \textcolor<3->{red}{energy}\pause \pause
 \item \textbf{isolated}: separate from others; happening in different places and at different times
+\begin{figure}
+%\begin{subfigure}{.5\textwidth}
+\includegraphics[width=0.3\linewidth]{figures/sparc.pdf}
+%\end{subfigure}
+\end{figure}
 \end{itemize}
 \end{frame}
 
