--- a/xen-arch.tex
+++ b/xen-arch.tex
@@ -113,13 +113,16 @@ Oracle Asia Research and Development Centers (Beijing) \\ % Your institution for
 A virtual machine is taken to be an efficient, isolated duplicate of the real machine. (Gerald J.Popek and Rebert P. Goldberg, 1974) \pause
 \begin{itemize}
 \item \textbf{efficient}: capable of producing desired results without wasting materials, time, or \textcolor<3->{red}{energy}\pause \pause
-\item \textbf{isolated}: separate from others; happening in different places and at different times
+\item \textbf{isolated}: separate from others; happening in different places and at different times \pause
+\end{itemize}
+\begin{center}
 \begin{figure}
 %\begin{subfigure}{.5\textwidth}
 \includegraphics[width=0.3\linewidth]{figures/sparc.pdf}
+\includegraphics[width=0.2\linewidth]{figures/power.pdf}
 %\end{subfigure}
 \end{figure}
-\end{itemize}
+\end{center}
 \end{frame}
 
 %------------------------------------------------
